syntax = "proto3";

package chicken_farmer.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "internal/pkg/grpc";

service FarmerService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      put: "/v1/farmer/register",
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      get: "/v1/farmer/login",
    };
  }

  rpc GrantGoldEggs(GrantGoldEggsRequest) returns (GrantGoldEggsResponse) {
    option (google.api.http) = {
      post: "/v1/farmer/grant-gold-eggs",
      body: "*"
    };
  }

  rpc SpendGoldEggs(SpendGoldEggsRequest) returns (SpendGoldEggsResponse) {
    option (google.api.http) = {
      post: "/v1/farmer/spend-gold-eggs",
      body: "*"
    };
  }

  rpc GetGoldEggs(GetGoldEggsRequest) returns (GetGoldEggsResponse) {
    option (google.api.http) = {get: "/v1/farmer/gold-eggs"};
  }
}

message Farmer {
  string name = 1;
  uint32 farm_name = 2;
  uint32 password = 3;
}

message RegisterRequest {
  string farmer_name = 1 [(google.api.field_behavior) = REQUIRED];
  string farm_name = 2 [(google.api.field_behavior) = REQUIRED];
  string password = 3 [(google.api.field_behavior) = REQUIRED];
}
message RegisterResponse {
  string farmer_id = 1;
  string farm_id = 2;
}

message LoginRequest {
  string farmer_name = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}
message LoginResponse {
  string jwt = 1;
}

message GrantGoldEggsRequest {
  uint32 amount = 1 [(google.api.field_behavior) = REQUIRED];
}
message GrantGoldEggsResponse {}

message SpendGoldEggsRequest {
  uint32 amount = 1 [(google.api.field_behavior) = REQUIRED];
}
message SpendGoldEggsResponse {}

message GetGoldEggsRequest {}
message GetGoldEggsResponse {
  uint32 amount = 1;
}
